--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -29,6 +29,10 @@
 \usepackage{breakurl} % in combination with sloppy and fussy commands this should allow breackage of urls, but it didn't; also \url will produce links
 \usepackage{hyperref}
 
+% In case the "d" in dx is desired to have a special markup.
+%\usepackage{amsmath}
+%\newcommand*\diff{\mathop{}\!\mathrm{d}}
+
 % Some attempts to corretly break urls (and e.g. also script names).
 % \PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 % \g@addto@macro{\UrlBreaks}{\UrlOrds}
