--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -94,7 +94,7 @@
 %\include{Chapter2_Methods/chapter2_methods}
 %\include{ChapterX_Filarecovery/ChapterX_Filarecovery}
 \include{ChapterX_CRP/CRP_main}
-\include{ChapterX_Modeling/Nghe_model_cAMP_v5}
+%\include{ChapterX_Modeling/Nghe_model_cAMP_v5}
 %\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 %\include{ChapterX_Notes/ChapterX_Notes}
 %\include{ChapterX_Conclusion/ChapterX_Conclusion}
