--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -70,7 +70,8 @@
 
 %% Specify the title and author of the thesis. This information will be used on
 %% the title page (in title/title.tex) and in the metadata of the final PDF.
-\title{Fluctuation and regulation}
+%\title{Fluctuation and regulation}
+\title{Dynamical regulation in cells}
 \author{Martijn}{Wehrens} %in title page: author added manually (uppercase!)
 
 %% Use Roman numerals for the page numbers of the title pages and table of
