--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -58,7 +58,7 @@
 % Needed for eps??
 \usepackage{epstopdf}
 
-\graphicspath{{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
+\graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
 	{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}}
 
 
@@ -89,7 +89,7 @@
 %% Turn on thumb indices.
 \thumbtrue
 
-%\include{Chapter0_Preface_etc/preface_etc}
+\include{Chapter0_Preface_etc/preface_etc}
 %\include{Chapter1_Introduction/chapter1_introduction}
 %\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
 %\include{Chapter2_Methods/chapter2_methods}
