--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -58,6 +58,9 @@
 % Needed for eps??
 \usepackage{epstopdf}
 
+% for degree symbol
+\usepackage{gensymb}
+
 \graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
 	{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}}
 
@@ -92,7 +95,7 @@
 \include{Chapter0_Preface_etc/preface_etc}
 %\include{Chapter1_Introduction/chapter1_introduction}
 %\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
-%\include{Chapter2_Methods/chapter2_methods}
+%\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
 %\include{ChapterX_Filarecovery/ChapterX_Filarecovery}
 \include{ChapterX_CRP/CRP_main}
 %\include{ChapterX_Modeling/Nghe_model_cAMP_v5}
