--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -1,3 +1,10 @@
+
+
+% Written by Noreen Walker,
+% see also Thesis\Commands\additional_custom_commands
+% For additional code by MW
+
+
 % Define new convenient shortcut commands and include packages
 
 % *******************************************
