--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -67,6 +67,7 @@
 
 % misc
 \usepackage{tabularx}
+\usepackage{setspace}
 
 % Graphic paths
 \graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
@@ -100,6 +101,10 @@
 
 %% Turn on thumb indices.
 \thumbtrue
+
+% SPACING OPTIONS
+%\onehalfspacing
+\doublespacing
 
 %\include{Chapter0_Preface_etc/preface_etc}
 %\include{Chapter1_Introduction/chapter1_introduction}
