--- a/Thesis/Acknowledgements/acknowledgements.tex
+++ b/Thesis/Acknowledgements/acknowledgements.tex
@@ -4,11 +4,15 @@
 
 \chapter*{Acknowledgements}
 
+Don't forget:
+
+
 
 Remember to thank:
 > At (Ton) de Waart
 > Giulia Bergamaschi
 > Nick de Lange
+> Andrew Mugler [attitude towards science]
 
 Sander
 
