--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -133,13 +133,9 @@
 \bibliographystyle{Style/bibstyle_dissertation}
 
 %******************
-
-\include{ChapterZ_Thanks/chapterZ_thanks}
-
-
-% Stuff I'll also have to add:
+% THanks etc..
 %- \include{Summary/summary} % English and Dutch
-\include{Acknowledgements/acknowledgements} 
+%\include{Acknowledgements/acknowledgements} % ALREADY PARTIALLY WRITTEN!
 %- \include{Publications/publications}
 %- \include{Cv/cv}
 
