--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -31,7 +31,7 @@
 \usepackage{hyperref}
 
 % In case the "d" in dx is desired to have a special markup.
-%\usepackage{amsmath}
+\usepackage{amsmath} % also required for align environment
 %\newcommand*\diff{\mathop{}\!\mathrm{d}}
 
 % Some attempts to corretly break urls (and e.g. also script names).
@@ -117,6 +117,7 @@
 \include{ChapterX_CRP/CRP_main}
 \include{ChapterX_CRP/CRP_SupplementaryNotes1}
 \include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
+\include{ChapterX_CRP/CRP_SupplementaryNotes3}
 \include{ChapterX_CRP/CRP_SupplementaryFigures}
 %\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 %\include{ChapterX_Notes/ChapterX_Notes}
