--- a/Thesis/Title/title.tex
+++ b/Thesis/Title/title.tex
@@ -137,7 +137,7 @@ geboren te Nijmegen, Nederland.
 \vfill
 
 %AMOLF LOGO
-\includegraphics[height=1in]{title/logoamolf/1111_AmolfLogo_pms_png}
+\includegraphics[height=1in]{./title/logoamolf/1111_AmolfLogo_pms_png}
 
 %\vfill
 
