--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -71,7 +71,8 @@
 
 % Graphic paths
 \graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
-	{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}{./ChapterX_CRP/Figures/matlabExport_model/}}
+	{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}{./ChapterX_CRP/Figures/matlabExport_model/}
+    {T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Modeling/drawings_png/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/eps_files/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Chapter2_Methods/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_pulsing/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_model/}}
 
 
 % Additional commands
