--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -68,6 +68,7 @@
 % misc
 \usepackage{tabularx}
 \usepackage{setspace}
+% \usepackage{longtable} % not sure this combines with tabularx
 
 % Graphic paths
 \graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
