--- a/Thesis/dissertation_extrapartsthatdidntmakeit.tex
+++ b/Thesis/dissertation_extrapartsthatdidntmakeit.tex
@@ -94,6 +94,26 @@
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter*{Appendix stuff}
+% \section*{Appendix}
+
+\begin{sloppypar}
+    Below a list of some useful scripts, they can be found in the \nolinkurl{schnitzcells_tans_extensions} repository.
+\end{sloppypar}
+
+\begin{itemize}
+    \item[]
+    \nolinkurl{general_CC_littletest_noiseandbranchesunequallength.m}: 
+    A script that illustrates how branches of unequal length are normalized.
+    \item[]
+    \nolinkurl{general_weighingCCs_setup.m}: 
+    This script calculates and plots cross-correlations for example branches of unequal length.
+\end{itemize}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 
 
 
