--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -116,20 +116,23 @@
 % First chapters
 %\include{Chapter0_Preface_etc/preface_etc}
 %\include{Chapter1_Introduction/chapter1_introduction}
-%\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
-%\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
+\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
+\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
+
+% FILA RECOVERY
 \include{ChapterX_Filarecovery/ChapterX_Filarecovery}
+\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
 
 % CRP chapter
-%\include{ChapterX_CRP/CRP_main} \label{chapter:CRP}
-%\include{ChapterX_CRP/CRP_SupplementaryNotes1}
-%\include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
-%\include{ChapterX_CRP/CRP_SupplementaryNotes3}
-%\include{ChapterX_CRP/CRP_SupplementaryFigures}
-%\include{ChapterX_CRP/CRP_SupplementaryTables}
+\include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
+\include{ChapterX_CRP/CRP_SupplementaryNotes1}
+\include{ChapterX_Modeling/Nghe_model_cAMP_v5} % This used to be a separate chapter, but is now included as notes to the CRP chapter
+\include{ChapterX_CRP/CRP_SupplementaryNotes3}
+\include{ChapterX_CRP/CRP_SupplementaryFigures}
+\include{ChapterX_CRP/CRP_SupplementaryTables}
 
 % More chapters
-%\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
+\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 %\include{ChapterX_Notes/ChapterX_Notes}
 %\include{ChapterX_Conclusion/ChapterX_Conclusion}
 
