--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -141,7 +141,7 @@
 % More chapters
 %\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 %\include{ChapterX_Notes/ChapterX_Notes}
-%\include{ChapterX_Conclusion/ChapterX_Conclusion}
+\include{ChapterX_Conclusion/ChapterX_Conclusion}
 
 
 %%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
