--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -142,7 +142,7 @@
 %\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
 %\include{ChapterX_Notes/ChapterX_Notes}
 \include{ChapterX_Conclusion/ChapterX_Conclusion}
-
+\include{ChapterX_Summary/summary_samenvatting}
 
 %%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
 
