--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -153,7 +153,7 @@
 
 %\include{ChapterZ_Protocols/chapterZ_appendix_methods_and_protocols}
 
-
+% BIBLIOGRAPHY
 % include bibliography
 \bibliography{../library} 
 % carefully choose the .bib file 
