(start feedback ST)

--- a/Thesis/Acknowledgements/acknowledgements.tex
+++ b/Thesis/Acknowledgements/acknowledgements.tex
@@ -14,7 +14,13 @@ Remember to thank:
 > Nick de Lange
 > Andrew Mugler [attitude towards science]
 
+> Petra
+> Laurens Krah
+> Benjamin Towbin
+
 Sander
+
+AMOLF
 
 Joris
 Johannes
