(CRP) Processed feedback ST part 2.

--- a/Thesis/PackagesNewCommands/packages_newcommands.tex
+++ b/Thesis/PackagesNewCommands/packages_newcommands.tex
@@ -60,6 +60,8 @@
 % *******************************************
 % Ecoli
 \newcommand{\ecoli}{\textit{E. coli }}
+% Delta cAMP
+\newcommand{\dcamp}{$\Delta$cAMP }
 % P_lac
 \newcommand{\plac}{\ensuremath{\text{P}_{\text{lac}}\text{ }}}
 % P_N25
