(NL) dutch summary/started dutch intro

--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -127,17 +127,20 @@
 
 %%%%%%% CHAPTERS (& PREFACE ETC)
 
-% First chapters
-%\include{ChapterX_Summary/summary}
-%\include{ChapterX_Summary/samenvatting}
-%\include{Chapter0_Preface_etc/preface_etc}
-%\include{Chapter1_Introduction/chapter1_introduction}
-%\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
-%\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
+% FIRST CHAPTERS
+\include{ChapterX_Summary/summary}
+\include{ChapterX_Summary/samenvatting}
+\include{Chapter0_Preface_etc/preface_etc}
+\include{Chapter1_Introduction/chapter1_introduction}
+\include{Chapter1_Introduction/chapter1_introductie_NL}
+\include{Chapter2_Methods/chapter2_methods} % \label{chapter:methods}
 
 % FILA RECOVERY
-%\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
-%\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
+\include{ChapterX_Filarecovery/ChapterX_Filarecovery} % \label{chapter:filarecovery}
+\include{ChapterX_Filarecovery/SupplementalData_ThesisVersion}
+
+% LITERATURE REVIEW
+\include{ChapterX_Literaturereview/ChapterX_Literaturereview} % \label{chapter:literaturereview}
 
 % CRP chapter
 \include{ChapterX_CRP/CRP_main} %\label{chapter:CRP}
@@ -147,9 +150,11 @@
 \include{ChapterX_CRP/CRP_SupplementaryFigures}
 \include{ChapterX_CRP/CRP_SupplementaryTables}
 
-% More chapters
-%\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
-%\include{ChapterX_Conclusion/ChapterX_Conclusion}
+% RIBOSOMES
+\include{ChapterX_Ribosomes/ChapterX_Ribosomes}
+
+% CONCLUSION
+\include{ChapterX_Conclusion/ChapterX_Conclusion}
 
 
 %%%%%%% MISC OTHER PARTS AT THE END OF THE THESIS
